Rename preRegistrationExperiments to e164Experiments